Sync epi_judge_java
Lots of changes that were not to be seen public
Co-authored-by: Tsung-Hsien Lee <tsunghsienlee@gmail.com>
Co-authored-by: adnanaziz <adnan.aziz@gmail.com>